c2prj1_cards/grade.txt
Grading at Tue Aug 13 22:15:33 UTC 2019
Compiling cards.c
cards.c: In function ‘ranking_to_string’:
cards.c:14:3: error: enumeration value ‘NOTHING’ not handled in switch [-Werror=switch]
   switch(r){
   ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
